# python-uv-nox-ruff-bandit-pytest

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  noxfile.py  pyproject.toml
src/main/: __init__.py  main.py
tests/: test_default.py
