[project]
name = "main"
version = "0.1.0"
description = "PROJECT_DESCRIPTION"
readme = "README.md"
authors = [
    { name = "FIRST_NAME LAST_NAME", email = "EMAIL_ADDRESS" }
]
requires-python = ">=3.12"
dependencies = []
license = { text = "MIT" }
keywords = [ ]
classifiers = [
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

[project.urls]
Homepage = "HOMEPAGE_URL"
Repository = "REPOSITORY_URL"
Issues = "ISSUES_URL"

[dependency-groups]
dev = [
    "nox>=2026.04.10",
    "nox-uv>=0.7.1",
]
lint = [
    "ruff>=0.15.10",
    "mypy>=1.20.0",
    "pip-audit>=2.10.0",
    "bandit>=1.9.4",
]
test = [
    "pytest>=9.0.0",
]

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.coverage.run]
source = ["src"]
branch = true
omit = ["*/tests/*", "*/test_*.py"]
data_file = "reports/.coverage"

[tool.coverage.html]
directory = "reports/htmlcov"

[tool.coverage.report]
precision = 2
show_missing = true
fail_under = 98

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true
warn_unreachable = true
disallow_untyped_defs = true
disallow_any_unimported = true

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "N",   # pep8-naming
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "SIM", # flake8-simplify
    "D",   # pydocstyle (docstrings)
    "T20", # flake8-print
    "RUF", # ruff-specific rules
    "ARG", # flake8-unused-arguments
    "PTH", # flake8-use-pathlib
    "A",   # flake8-builtins
    "ERA", # eradicate commented-out code
    "PL",  # pylint
]
ignore = [
    "D203",  # Conflicts with D211 (PEP 257: no blank line before class)
    "D213",  # Conflicts with D212 (PEP 257: summary on first line)
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = [
    "S101",  # assert is the standard way to write tests
    "D",     # test docstrings are descriptive, not API documentation
    "ARG",   # test helpers often match callback signatures without using all args
]

[build-system]
requires = ["uv_build>=0.11.6,<0.12.0"]
build-backend = "uv_build"
